--- a/style.css
+++ b/style.css
@@ -48,8 +48,20 @@ body {
   font-family: "Qahiri", sans-serif;
   font-size: 32px;
   text-align: center;
+  position: relative;
 }
 
 .grid tbody tr td.bomb {
   background-color: var(--bomb-color);
+}
+
+.grid tbody tr td.flagged::before {
+  content: "⚐";
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 25px;
+  width: 35px;
+  height: 40px;
 }
